--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^3.3.7",
     "chai": "^4.2.0",
     "core-js": "^2.5.4",
+    "fs": "0.0.1-security",
     "jquery": "^3.4.1",
     "json-viewer": "^2.2.0",
     "mocha": "^6.2.0",
