--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build && node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,6 +22,7 @@
     "bootstrap": "^3.3.7",
     "chai": "^4.2.0",
     "core-js": "^2.5.4",
+    "express-session": "^1.16.2",
     "fs": "0.0.1-security",
     "jquery": "^3.4.1",
     "json-viewer": "^2.2.0",
