--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
+  "version": "1.0.0",
   "name": "elasticsearch",
-  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng build && node server.js",
-    "build": "ng build",
+    "e2e": "ng e2e",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "ng build",
+    "start": "ng build && node server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
+    "rxjs": "~6.3.3",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "jquery": "^3.4.1",
+    "core-js": "^2.5.4",
+    "zone.js": "~0.8.26",
+    "bootstrap": "^3.3.7",
+    "fs": "0.0.1-security",
+    "json-viewer": "^2.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "bootstrap": "^3.3.7",
-    "chai": "^4.2.0",
-    "core-js": "^2.5.4",
-    "express-session": "^1.16.2",
-    "fs": "0.0.1-security",
-    "jquery": "^3.4.1",
-    "json-viewer": "^2.2.0",
-    "mocha": "^6.2.0",
+    "@angular/common": "~7.2.0",
     "ngx-json-viewer": "^2.4.0",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "@angular/router": "~7.2.0",
+    "express-session": "^1.16.2",
+    "@angular/compiler": "~7.2.0",
+    "@angular/animations": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "karma": "~4.0.0",
+    "tslib": "^1.10.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "codelyzer": "~4.5.0",
+    "protractor": "~5.4.0",
+    "typescript": "~3.2.2",
+    "@types/node": "~8.9.4",
     "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "karma-jasmine": "~1.1.2",
+    "jasmine-core": "~2.99.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslib": "^1.10.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "@angular-devkit/build-angular": "~0.13.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1"
   }
 }
