--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.16.2",
     "@angular/compiler": "~7.2.0",
     "@angular/animations": "~7.2.0",
+    "ngx-page-scroll-core": "^6.0.2",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0"
   },
