--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "rxjs": "~6.3.3",
-    "chai": "^4.2.0",
-    "mocha": "^6.2.0",
-    "jquery": "^3.4.1",
-    "core-js": "^2.5.4",
-    "zone.js": "~0.8.26",
-    "bootstrap": "^3.3.7",
-    "fs": "0.0.1-security",
-    "json-viewer": "^2.2.0",
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "ngx-json-viewer": "^2.4.0",
-    "@angular/router": "~7.2.0",
-    "express-session": "^1.16.2",
-    "@angular/compiler": "~7.2.0",
-    "@angular/animations": "~7.2.0",
-    "ngx-page-scroll-core": "^6.0.2",
     "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0"
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "bootstrap": "^3.3.7",
+    "chai": "^4.2.0",
+    "core-js": "^2.5.4",
+    "express-session": "^1.16.2",
+    "fs": "0.0.1-security",
+    "jquery": "^3.4.1",
+    "json-viewer": "^2.2.0",
+    "mocha": "^6.2.0",
+    "ng2-page-scroll": "^4.0.0-beta.12",
+    "ngx-json-viewer": "^2.4.0",
+    "ngx-page-scroll-core": "^6.0.2",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "karma": "~4.0.0",
